<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="INDEXING_2" Id="{55c1d41c-bec4-4f85-b013-949698a43a00}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM INDEXING_2
VAR
	bStartInput : BOOL;
	bServoOn : BOOL;
	bProgram0_On : BOOL;
	bProgram1_On : BOOL :=TRUE;
	bProgram2_On : BOOL :=FALSE;
	bProgram3_On : BOOL:=FALSE;
	bProgram4_On : BOOL:=FALSE;	
	bHomePositionReturn : BOOL;
	bResetInput : BOOL;
	bEmergencyInput : BOOL := TRUE;
	
	IN_POSITION_INPUT: BOOL;
	IN_POSITIONING_COMPLETION: BOOL;
	IN_START_INPUT_WAIT: BOOL;
	IN_ALARM1: BOOL;
	IN_ALARM2: BOOL;
	IN_READY_STATE: BOOL;
	T1: TON;
	TMR1: TON;
	TMR2: TON;
	TMR3: TON;
	TMR4: TON;
	TMR5: TON;
	TMR6: TON;
	TMR7: TON;
	IN_SERVO_STATUS: BOOL;
	CNT1: CTU;
	ENABLE_TIMER: INT;
	ResetCount: BOOL;
	CNT_INDEX: CTU;
	
	RESET_CNT_INDEX: BOOL;
	TMR8: TON;
	M1:BOOL;
	M2:BOOL;
	M3:BOOL;
	M4:BOOL;
	TMR_OFF: TON;
	TMR_RELEASE: TON;
	IDX: INT;
END_VAR

VAR CONSTANT
	ISP: R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[INDEXING_2_VAR.DataByteOutput2[0].0 := bProgram0_On;
INDEXING_2_VAR.DataByteOutput2[0].1 := bProgram1_On;
INDEXING_2_VAR.DataByteOutput2[0].2 := bProgram2_On;
INDEXING_2_VAR.DataByteOutput2[0].3 := bProgram3_On;
INDEXING_2_VAR.DataByteOutput2[0].4 := bProgram4_On;
INDEXING_2_VAR.DataByteOutput2[0].6 := bResetInput;
INDEXING_2_VAR.DataByteOutput2[0].7 := bHomePositionReturn;
INDEXING_2_VAR.DataByteOutput2[1].0 := bStartInput;
INDEXING_2_VAR.DataByteOutput2[1].1 := bServoOn;
INDEXING_2_VAR.DataByteOutput2[1].4 := bEmergencyInput;

IN_POSITION_INPUT := INDEXING_2_VAR.DataByteInput2 [1].0;
IN_POSITIONING_COMPLETION := INDEXING_2_VAR.DataByteInput2 [1].1;
IN_START_INPUT_WAIT := INDEXING_2_VAR.DataByteInput2 [1].2;
IN_ALARM1 := INDEXING_2_VAR.DataByteInput2 [1].3;
IN_ALARM2 := INDEXING_2_VAR.DataByteInput2 [1].4;
IN_READY_STATE :=INDEXING_2_VAR.DataByteInput2 [1].7;
IN_SERVO_STATUS :=INDEXING_2_VAR.DataByteInput2 [1].6; 

M1:=INDEXING_2_VAR.DataByteInput2 [0].0;
M2:=INDEXING_2_VAR.DataByteInput2 [0].1;
M3:=INDEXING_2_VAR.DataByteInput2 [0].2;
M4:=INDEXING_2_VAR.DataByteInput2 [0].3;
bProgram1_On:=FALSE;
bProgram2_On:=FALSE;
bProgram3_On:=FALSE;
bProgram4_On:=FALSE;

//CEK SERVO STATUS
IF NOT IN_SERVO_STATUS THEN
	bResetInput := TRUE;
	TMR4(IN:=bResetInput,PT:=T#0.5S);
	IF TMR4.Q THEN
		bResetInput := FALSE;
	END_IF
	bServoOn:=TRUE;
	//POWER_CONTROL.O_PWR_CTRL_INDEXING_2:=TRUE;
	TMR8(IN:=POWER_CONTROL.O_PWR_CTRL_INDEXING_2,PT:=T#0.5S);	
	IF TMR8.Q THEN
		POWER_CONTROL.O_PWR_CTRL_INDEXING_2:=FALSE;
		TMR8(IN:=FALSE);
	END_IF
END_IF

//ALARM RESET
IF NOT IN_ALARM1 OR NOT IN_ALARM2 THEN
	bResetInput := TRUE;
	TMR4(IN:=bResetInput,PT:=T#0.5S);
		INPUT_VAR.ALARM1:=NOT IN_ALARM1 OR NOT IN_ALARM2;
	IF TMR4.Q THEN
		bResetInput := FALSE;
	END_IF
ELSE
	TMR4(IN:=FALSE);
END_IF

//HOMING
IF NOT INDEXING_2_VAR.I_INDEXING_2_HOME THEN
 	INDEXING_2_VAR.O_INDEXING_HOME:=TRUE;
END_IF
 
IF INDEXING_2_VAR.O_INDEXING_HOME THEN
	bHomePositionReturn:=TRUE;
	ResetCount:=TRUE;
	INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE:=FALSE;
	RESET_CNT_INDEX:=TRUE;
ELSE
	RESET_CNT_INDEX:=FALSE;
	bHomePositionReturn:=FALSE;
END_IF

ISP(CLK:=IN_POSITIONING_COMPLETION);	
IF 	ISP.Q THEN
	INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE:=TRUE;
END_IF

IF INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE OR INDEXING_2_VAR.O_ROTATION_DONE THEN
	INDEXING_2_VAR.I_INDEXING_2_HOME:=TRUE;
	INDEXING_2_VAR.O_INDEXING_HOME:=FALSE;
END_IF
//POWER RESET
IF bHomePositionReturn OR NOT INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE THEN
	TMR_OFF(IN:=TRUE,PT:=T#60S);
	IF TMR_OFF.Q THEN
		POWER_CONTROL.O_PWR_CTRL_INDEXING_2:=TRUE;
		TMR_RELEASE(IN:=TRUE,PT:=T#0.5S);
		BPROGRAM0_ON:=FALSE;
	END_IF
ELSE
	TMR_OFF(IN:=FALSE);
	TMR_RELEASE(IN:=FALSE);
END_IF

IF TMR_RELEASE.Q THEN
	POWER_CONTROL.O_PWR_CTRL_INDEXING_1:=FALSE;
	TMR_OFF(IN:=FALSE);
END_IF



//START ROTATION 
	IF 	INDEXING_2_VAR.O_ROTATION_START AND IN_START_INPUT_WAIT AND NOT INDEXING_2_VAR.O_INDEXING_HOME THEN
		IDX:=1;
		INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE:=FALSE;
	END_IF
CASE IDX OF
1:
	bprogram0_on:=TRUE;
	IF BPROGRAM0_ON THEN
		IDX:=2;
		INDEXING_2_VAR.O_ROTATION_START:=FALSE;
	END_IF

2:
//select Program No.
	IF bprogram0_on THEN
		INDEXING_2_VAR.O_ROTATION_START:=FALSE;
		INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE:=FALSE;
		TMR1(IN:=bprogram0_on,PT:=T#15MS);
		bStartInput:=tmr1.Q ;
		IF tmr1.Q THEN
			TMR2(in:=TRUE,pt:=T#25MS);
		END_IF
	
		IF tmr2.Q THEN
			tmr1(in:=FALSE);
			bStartInput:=FALSE;
		END_IF
		tmr3(in:=tmr2.Q,pt:=T#5MS);
		IF tmr3.Q THEN
			bprogram0_on:= FALSE;
			tmr2(in:=FALSE);
			tmr3(in:=FALSE);
			
		END_IF
	END_IF
	IF 	ISP.Q THEN
		INDEXING_2_VAR.O_ROTATION_DONE:=TRUE;
		INDEXING_2_VAR.O_ROTATION_START:=FALSE;
		INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE:=TRUE;
		IDX:=3;
	END_IF
3:
		IF INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE OR INDEXING_2_VAR.O_ROTATION_DONE THEN
		IDX:=0;
	END_IF	
END_CASE


IF  INDEXING_2_VAR.I_INDEXING_2_HOME THEN
	CNT_INDEX(CU:=bprogram0_on,RESET:=CNT_INDEX.Q,PV:=4);
	ELSE
	CNT_INDEX(CU:=FALSE);
	INDEXING_2_VAR.CARRIER_INDEX :=100;
END_IF

CASE CNT_INDEX.CV OF
	0:
	INDEXING_2_VAR.CARRIER_INDEX :=0;
	RESET_CNT_INDEX:=FALSE;
	1:
	INDEXING_2_VAR.CARRIER_INDEX :=1;
	2:
	INDEXING_2_VAR.CARRIER_INDEX :=2;
	3:
	INDEXING_2_VAR.CARRIER_INDEX :=3;
ELSE
	INDEXING_2_VAR.CARRIER_INDEX :=0;
END_CASE

IF RESET_CNT_INDEX THEN
	CNT_INDEX(CU:=FALSE);
END_IF
//START ROTATING TRIGGER BY 3 ROBOTS
IF (TESTER_C8_VAR.READY_INDEXING AND LOADER_RS4_VAR.READY_INDEXING AND SORTER_RS4_VAR.READY_INDEXING)
	OR (LOADER_RS4_VAR.READY_INDEXING AND NOT TESTER_C8_VAR.O_C8_ENABLE)
	OR (TESTER_C8_VAR.READY_INDEXING AND LOADER_RS4_VAR.READY_INDEXING AND NOT SORTER_RS4_VAR.I_SORTER_RS4_ENABLE) THEN
	INDEXING_2_VAR.O_ROTATION_START:=TRUE;
ELSE
	INDEXING_2_VAR.O_ROTATION_START:=FALSE;
END_IF
                       	]]></ST>
    </Implementation>
    <LineIds Name="INDEXING_2">
      <LineId Id="3" Count="16" />
      <LineId Id="412" Count="4" />
      <LineId Id="803" Count="3" />
      <LineId Id="720" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="354" Count="0" />
      <LineId Id="407" Count="0" />
      <LineId Id="355" Count="0" />
      <LineId Id="655" Count="0" />
      <LineId Id="358" Count="2" />
      <LineId Id="396" Count="0" />
      <LineId Id="399" Count="0" />
      <LineId Id="401" Count="1" />
      <LineId Id="404" Count="0" />
      <LineId Id="403" Count="0" />
      <LineId Id="356" Count="0" />
      <LineId Id="406" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="99" Count="2" />
      <LineId Id="656" Count="0" />
      <LineId Id="102" Count="2" />
      <LineId Id="276" Count="1" />
      <LineId Id="106" Count="0" />
      <LineId Id="405" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="203" Count="1" />
      <LineId Id="207" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="107" Count="1" />
      <LineId Id="192" Count="0" />
      <LineId Id="278" Count="0" />
      <LineId Id="297" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="719" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="739" Count="9" />
      <LineId Id="705" Count="0" />
      <LineId Id="459" Count="0" />
      <LineId Id="502" Count="3" />
      <LineId Id="721" Count="0" />
      <LineId Id="506" Count="0" />
      <LineId Id="508" Count="3" />
      <LineId Id="518" Count="0" />
      <LineId Id="512" Count="3" />
      <LineId Id="706" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="610" Count="0" />
      <LineId Id="605" Count="0" />
      <LineId Id="607" Count="1" />
      <LineId Id="732" Count="0" />
      <LineId Id="609" Count="0" />
      <LineId Id="461" Count="0" />
      <LineId Id="561" Count="0" />
      <LineId Id="568" Count="0" />
      <LineId Id="570" Count="1" />
      <LineId Id="600" Count="0" />
      <LineId Id="572" Count="0" />
      <LineId Id="569" Count="0" />
      <LineId Id="573" Count="0" />
      <LineId Id="575" Count="2" />
      <LineId Id="726" Count="0" />
      <LineId Id="578" Count="14" />
      <LineId Id="733" Count="0" />
      <LineId Id="593" Count="1" />
      <LineId Id="727" Count="3" />
      <LineId Id="738" Count="0" />
      <LineId Id="731" Count="0" />
      <LineId Id="599" Count="0" />
      <LineId Id="735" Count="2" />
      <LineId Id="562" Count="0" />
      <LineId Id="716" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="312" Count="0" />
      <LineId Id="315" Count="1" />
      <LineId Id="318" Count="0" />
      <LineId Id="313" Count="1" />
      <LineId Id="142" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="309" Count="0" />
      <LineId Id="305" Count="0" />
      <LineId Id="286" Count="0" />
      <LineId Id="302" Count="0" />
      <LineId Id="288" Count="2" />
      <LineId Id="294" Count="1" />
      <LineId Id="282" Count="0" />
      <LineId Id="310" Count="0" />
      <LineId Id="303" Count="0" />
      <LineId Id="307" Count="1" />
      <LineId Id="143" Count="0" />
      <LineId Id="749" Count="0" />
      <LineId Id="755" Count="1" />
      <LineId Id="750" Count="0" />
      <LineId Id="752" Count="1" />
      <LineId Id="751" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>